--- a/house/composer.json
+++ b/house/composer.json
@@ -18,7 +18,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Uljx\\": "../uljx/"
         }
     },
     "autoload-dev": {
