--- a/graphql-apis/package.json
+++ b/graphql-apis/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollographql/graphql-playground-html": "^1.6.0",
     "apollo-server": "^2.0.0",
     "apollo-server-koa": "rc",
     "babel-core": "^6.26.3",
@@ -22,6 +23,7 @@
     "cron": "^1.3.0",
     "dataloader": "^1.4.0",
     "graphql": "^0.13.2",
+    "graphql-playground-html": "^1.6.0",
     "graphql-s2s": "^0.16.5",
     "graphql-server-koa": "^1.4.0",
     "graphql-tools": "^3.0.5",
@@ -37,6 +39,7 @@
     "pg": "^7.4.3",
     "sync": "^0.2.5",
     "transform-runtime": "^0.0.0",
+    "validator": "^10.6.0",
     "xml-js": "^1.6.7",
     "xmldom": "^0.1.27",
     "xpath": "^0.0.27"
