--- a/graphql-apis/package.json
+++ b/graphql-apis/package.json
@@ -22,6 +22,7 @@
     "config": "^1.31.0",
     "cron": "^1.3.0",
     "dataloader": "^1.4.0",
+    "geolite2": "^1.3.0",
     "graphql": "^0.13.2",
     "graphql-playground-html": "^1.6.0",
     "graphql-s2s": "^0.16.5",
@@ -30,8 +31,10 @@
     "graphql-type-json": "^0.2.1",
     "knex": "^0.15.2",
     "koa": "next",
+    "koa-body": "^4.0.4",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.10",
+    "maxmind": "^2.7.0",
     "md5": "^2.2.1",
     "merge-graphql-schemas": "^1.5.3",
     "moment": "^2.22.2",
